--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <link rel="stylesheet" type="text/css" media="all" href="css/owl.carousel.css">
 
 
-
+<meta name="facebook-domain-verification" content="10cdoilku3uo3ah6q17nj7hcp3na49" />
   
 </head>
 
